// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI-01 снимки главного экрана > без материалов — онбординг 1`] = `"Пока нет ни одного материала"`;

exports[`UI-01 снимки главного экрана > все архивированы: 0 ₽ и — 1`] = `
"<u><b>💰Всего: 0 ₽</b></u>
----------------------------------
<tg-emoji emoji-id="5334559435597560442">📅</tg-emoji>За Август:
+10 562 ₽ / +1.07%

<tg-emoji emoji-id="5352970667610349580">📊</tg-emoji>За сегодня:
—

Нет материалов в работе — все в архиве."
`;

exports[`UI-01 снимки главного экрана > есть замороженные и все заморожены 1`] = `
"<u><b>💰Всего: 1 000 327 ₽</b></u>

<b>В работе:</b> 0 ₽
🧊Заморожено: 318 861 ₽
----------------------------------
<tg-emoji emoji-id="5334559435597560442">📅</tg-emoji>За Август:
+10 562 ₽ / +1.07%

<tg-emoji emoji-id="5352970667610349580">📊</tg-emoji>За сегодня:
+327 ₽ / +0.03%
----------------------------------
<u>Заморожено:</u>
<tg-emoji emoji-id="5395449620744647196">💳</tg-emoji> Альфа 7131* — 318 861 ₽
+127 ₽ / +0.04%"
`;

exports[`UI-01 снимки главного экрана > нет предыдущего дня: P&L — 1`] = `
"<u><b>💰Всего: 1 000 327 ₽</b></u>

<b>В работе:</b> 681 466 ₽
🧊Заморожено: 318 861 ₽
----------------------------------
<tg-emoji emoji-id="5334559435597560442">📅</tg-emoji>За Август:
+10 562 ₽ / +1.07%

<tg-emoji emoji-id="5352970667610349580">📊</tg-emoji>За сегодня:
—
----------------------------------
<u><b>В работе:</b></u>
<tg-emoji emoji-id="5325860941412192758">💳</tg-emoji> Сбер 7121* — 124 276 ₽
+200 ₽ / +0.16%

<tg-emoji emoji-id="5368752026723304143">💳</tg-emoji> Втб 0134* — 557 190 ₽
+0 ₽ / 0.00%

<u>Заморожено:</u>
<tg-emoji emoji-id="5395449620744647196">💳</tg-emoji> Альфа 7131* — 318 861 ₽
+127 ₽ / +0.04%"
`;

exports[`UI-01 снимки главного экрана > обычный экран: T-6 сумма материалов = всего, UI-14 формат 1`] = `
"<u><b>💰Всего: 1 000 327 ₽</b></u>

<b>В работе:</b> 681 466 ₽
🧊Заморожено: 318 861 ₽
----------------------------------
<tg-emoji emoji-id="5334559435597560442">📅</tg-emoji>За Август:
+10 562 ₽ / +1.07%

<tg-emoji emoji-id="5352970667610349580">📊</tg-emoji>За сегодня:
+327 ₽ / +0.03%
----------------------------------
<u><b>В работе:</b></u>
<tg-emoji emoji-id="5325860941412192758">💳</tg-emoji> Сбер 7121* — 124 276 ₽
+200 ₽ / +0.16%

<tg-emoji emoji-id="5368752026723304143">💳</tg-emoji> Втб 0134* — 557 190 ₽
+0 ₽ / 0.00%

<u>Заморожено:</u>
<tg-emoji emoji-id="5395449620744647196">💳</tg-emoji> Альфа 7131* — 318 861 ₽
+127 ₽ / +0.04%"
`;
